--- a/style.css
+++ b/style.css
@@ -2,199 +2,528 @@
     padding: 0;
     }
 
-.corpo-do-site{
-    background-image: linear-gradient(#05253a,#136aa8);
-    border: solid 3px #FBCA03;
-}
-
-
 .cabeçalho{
-    background-color: #05253a;
+    background-color: #000000;
    display: flex;
-   justify-content: center;
-   border: solid 4px #FBCA03;
-   
+   opacity: 0.9;
+   justify-content: space-between;
+   position: fixed;
+   width: 100%;
+   top: 0;
+   right: 0;
 }
 
 .cabeçalho-imagem{
-width: 20%; 
+width: 5.5%; 
+padding: 13px;
+align-items: center;
 }
 
-.titulo-Escola{
-   display: flex;
-   justify-content: center;
-   color: white;
-   padding: 35px ;
-   font-family: Arial, Helvetica, sans-serif;
-}
-
-.escola-texto-1{
+.div-conteudo-cabeçalho{
+    color: white;
     display: flex;
+    margin: 0px 34px;
+    align-items: center;    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+.texto-cabeçalho1{
+    margin: 0px 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 94%;
+    color: white;
+
+}
+
+.texto-cabeçalho2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 10px;
+    border: solid 10px #002BE7;
+    font-size: 94%;
+    padding: 0px 18px;
+    color: white;
+}
+
+.corpo-do-site{
+    background-image: url(fundo.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #002BE7;
+}
+
+.primeiro{
+    color: white;
+    text-align: center;
+    margin: 250px;
+}
+
+.muito-mais-a-ver{
+    font-family: arial;
+    font-size: 200%;
+    margin: 14px;
+}
+
+.titulo-planos{
+    display: flex;  
     align-items: center;
-}
-    
-.foto-brasão{
-    width: 80%;
+    margin: 20px 500px;
 }
 
-.texto-Escola{
-   display: list-item;
-   font-size: 140%;
-   padding: 12px 105px;
-   color: white;
-   font-family: Arial, Helvetica, sans-serif;
-   text-align: justify;
+.planos-a-partir{
+    margin: 12px;
+    font-family: arial;
+    font-size: 150%;
+}
 
+.valor{
+    font-family: arial;
+    font-size: 170%;
+    font-weight: bold;
 
 }
 
-.sao-joao{
+.assine{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 10px;
+    border: solid 10px #002BE7;
+    font-size: 96%;
+    margin: 0px 600px;
+    color: white;
+}
+
+.segundo{
+    background-image: linear-gradient(#0022b9,#08002e)
+}
+
+.tipos{
     display: flex;
     justify-content: center;
+    background-color: #5E5DF0;
+    margin: 0px 800px;
+    padding:10px;
+    border-radius: 30px;
+}
+
+.tipos-plano{
+    border-radius: 50px;
+      background: #5E5DF0;
+      color: #000000;
+      cursor: pointer;
+      font-weight: 700;
+      line-height: 24px;
+      outline: 0 solid transparent;
+      padding: 8px 18px;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      width: fit-content;
+      word-break: break-word;
+      border: 0;
+      background-color: white;
+    }
+  
+
+.titulo1{
+    font-size: 100%;
     color: white;
-    padding: 55px;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 54px;
 }
 
-.escola-texto-2{
-   display: flex;
-   align-items: center;
+.titulo-1{
+    font-size: 250%;
+    text-align: center;
+}
+
+.economize{
+    color: aquamarine;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
 
-.foto-são-joão{
-   margin: 0px 105px;
-   width: 55%;
-   border: solid 4px #FBCA03;
-   
-}
-
-.texto-Escola-2{
-    margin: 24px 105px;
-    text-align: justify;
-    font-size: 150%;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.colegio-la-salle{
-
-display: flex;
-justify-content: center;
-padding: 95px;
-color: white;
-font-family: Arial, Helvetica, sans-serif;
-}
-
-.escola-texto-3{
-    color: white;
+.planos{
     display: flex;
+    color: white;
+    justify-content: center;
+    border: #3d4dac solid;
+    background-color: #3d4dac;
+    margin: 0px 730px;
+    border-radius: 70px;
 
 }
 
-.foto-escola{
-    margin: 200px 105px;
-    width: 40%;
-    border: solid 4px #FBCA03;
-    
+.mensal{
+    color: #000000;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 100%;
+    background-color: #ffffff;
+    border-radius: 70px;
+    border: 10px #ffffff solid;
 }
 
-.texto-Escola-3{
-    text-align: justify;
+.anual{
+    background-color: #3d4dac;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 125%;
+    border-radius: 50px;
+    border: solid 10px #3d4dac;
+}
+
+.assinaturas-planos{
+    display: flex;
+    justify-content: center;
+    margin: 75px;
     align-items: center;
-    padding: 12px 105px;
-    font-size: 140%;
+}
+
+.assinatura1{
+width: 350px;
+height: 350px;
+background-color: #ffffff;
+border-radius: 2%;
+
+}
+
+.assinatura2{
+    width: 350px;
+    height: 350px;
+    background-color: #ffffff;
+    margin: 10px;
+    border-radius: 2%;
+    }
+
+    .assinatura3{
+        width: 350px;
+        height: 350px;
+        background-color: #ffffff;
+        border-radius: 2%;
+        }
+
+.qualidade{
+    color: white;
+    text-align: center;
+    padding: 20px 500px;
+}
+
+.titulo-assinatura{
+    color: #002BE7;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    margin: 20px 20px;
+    font-size: 150%;
+}
+
+.texto-plano1{
+    font-size: 100%;
+    color: #002BE7;
+    font-weight: 150;
+}
+
+.texto1{
+    color: rgb(255, 255, 255);
+    font-size: 250%;
+    text-align: center;
+    margin: 55px 100px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-.lista-1-texto-3{
-    text-align: justify;
-    align-items: center;
-    padding: 14px 105px;
-    font-size: 140%;
-    color: white;
+.span{
+    color: #08002e;
+    font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
-
-}
-.textos{
-display: list-item;
+    margin: 0px 3px;
 }
 
-.pessoas{
-    padding: 120px;
-    display: flex;
-    justify-content: space-around;
+.check{
+    width: 10%;
 }
 
-.foto-pessoas{
-    width: 60%;
+.download{
+    width: 5%;
+    margin: 0px 7px;
 }
 
-.pessoas-funcionarios{
-    display: block;
-}
-
-.foto-pessoas{
-    width: 60%; 
-}
-.texto-pessoas{
+.escolha3{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 7px;
+    border: solid 10px #002BE7;
+    font-size: 120%;
     color: white;
-    font-size: 200%;
-    padding: 0px 85px;
-    text-decoration: none;
-    
+    margin: 50px 79px;
 }
 
-.texto-pessoas1{
+.monitor{
+    width: 10%;
+}
+
+.textos-plano-1{
+    display: flex;
+    margin: 15px;
+}
+
+.preço{
+    color: #0022b9;
+    font-size: 200%;
+}
+
+.escolha{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 7px;
+    border: solid 10px #002BE7;
+    font-size: 120%;
     color: white;
-    font-size: 200%;
-    padding: 0px 95px;
-    
+    margin: 100px 79px;
 }
 
-
-
-.rodape{
-background-color: black;
-color: white;
-align-items: center;
-display: flex;
-justify-content: space-between;
-border: solid 4px #FBCA03;
-
+.escolha2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 7px;
+    border: solid 10px #002BE7;
+    font-size: 120%;
+    color: white;
+    margin: 105px 79px;
 }
 
-.mapa{
-    display: flex;
+.escolha3{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 7px;
+    border: solid 10px #002BE7;
+    font-size: 120%;
+    color: white;
+    margin: 55px 79px;
+}
+
+.terceiro{
+    background-color: #060022;
+    text-align: center;
     align-items: center;
+    color: rgb(156, 156, 156);
+    padding: 34px;
+    font-size: 180%;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.Telefone{
+
+.estreia{
+    color: white;
+}
+
+.filme-linha-primeira{
     display: flex;
-    align-items: center;
+    justify-content: center;
+    margin: 54px;
 }
 
-.foto-rodape{
-
+.filme-linha-1{
     width: 20%;
+    margin: 12px 20px;
+}
+
+.filme-linha-dois{
+    display: flex;
+    justify-content: center;
+    margin: 54px;
+}
+
+.filme-linha-2{
+    width: 20%;
+    margin: 0px 20px;
+}
+
+.assine2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #002BE7;
+    border-radius: 10px;
+    border: solid 10px #002BE7;
+    font-size: 60%;
+    margin: 42px 820px;
+    color: white;
+
+}
+
+.descubra{
+    color: white;
+    font-size: 80%;
+    margin: 24px;
 }
 
 
-.imagem-rodape{
-   display: list-item;
-   width: 5%;
+.botao{
+background-color: #060022;
+color: white;
+border-color: #060022;
+margin: 24px 24px;
+font-size: 100%;
+border: none;
+pointer-events: stroke;
+cursor: pointer;
 }
 
-.escrita-roda-pe{
-    padding: 0px 24px;
-   font-size: 130%;
-   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-   color: white; 
+.botaos{
+    pointer-events: stroke;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.max{
+    width: 15%;
+    margin: 20px;
+}
+
+.final-titulo1{
+    display: flex;
+    font-size: 70%;
+    color: white;
+    align-items: center;
+    margin: 0px 500px;
+}
+
+.um-foto{
+width: 5%;
+margin: 0px 12px;
+}
+
+.fonte1{
+    list-style: none;
+    font-size: 80%;
    
 }
-.link{
-    text-decoration: none;
+
+.turmas{
+    text-align: start;
+    margin: 24px 450px;
 }
 
+.texto1-final{
+    padding: 10px 600px;
+    font-size: 65%;
+    color: white;
+    text-align: start;
+
+}
+
+
+.final-titulo2{
+    display: flex;
+    font-size: 65%;
+    color: white;
+    align-items: center;
+    margin: 0px 500px;
+    text-align: center;
+}
+
+.dois-foto{
+width: 5%;
+margin: 0px 20px;
+}
+
+.texto2-final{
+    padding: 10px 600px;
+    font-size: 65%;
+    color: white;
+    text-align: start;
+
+}
+
+
+
+.perguntas{
+    color: white;
+    margin: 75px;
+}
+
+.titulo-perguntas{
+    font-size: 100%;
+    margin: 45px;
+    color: white;
+}
+
+
+
+.teste{
+    display: flex;
+    justify-content: center;
+    font-size: 150%;
+    margin: 55px;
+    color: white;
+    list-style: none;
+}
+
+.meio{
+    margin: 0px 100px;
+}
+
+.final1{
+    background-color: #060022;
+    color: white;
+    border: none;
+    margin: 0px 17px;
+    font-size: 55%;
+}
+
+
+
+.final2{
+background-color: #060022;
+color: white;
+border: none;
+margin: 0px 24px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.direitos{
+    color: white;
+    font-size: 40%;
+    margin: 20px;
+}
+
+    .rodape{
+        display: flex;
+        justify-content: center;
+        background-color: #060022;
+      align-items: center;
+      text-align: center;
+
+    }
+
+    .redes-sociais{
+        width: 1%;
+        margin: 0px 20px;
+    }
+
+    .redes{
+        margin: 0px 20px;
+    }
+    
 
 
